# jira-mcp

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
bitbucket-mcp/: .env.example  .gitignore  README.md
bitbucket-mcp/src/: bitbucket_client.py  server.py
bitbucket-mcp/tests/: __init__.py
src/: __init__.py  __main__.py  jira_client.py  server.py
tests/: test_bitbucket_client.py
